fix: front section overflow

--- a/src/containers/Front.css
+++ b/src/containers/Front.css
@@ -47,7 +47,6 @@
   display: flex;
   width: 100%;
   height: 100%;
-  padding: 2em;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
@@ -64,6 +63,11 @@
 
 .front-info p {
   font-size: 1.5em; 
+}
+
+.front-background {
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (min-width: 700px) {
