--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,6 @@
-* {
-  box-sizing: border-box;
-}
-
 html, body {
   font-size: 16px;
+  box-sizing: border-box;
 }
 
 body {
